# DecentralizedContractAuction

./: .gitignore
bid_optimization/: bid_optimizer.py  get_code_hashes.py  requirements.txt  substrate_test.py  task_auction.py  task_auction_interface.py
decentralized_task_auction/: Cargo.toml  lib.rs
decentralized_task_auction/task_auction/: Cargo.toml  lib.rs
docker/: Dockerfile
dta_agent/: Cargo.toml
dta_agent/src/: main.rs
simulation/: get_code_hashes.py  simulation.py
task_auction/: Cargo.toml  lib.rs
vrp_sim/: bid_optimizer.py  vrp_sim.py
