[package]
name = "dta_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
hex = "0.4.3"
subxt = "0.17"

sp-keyring = "5.0.0"

[dependencies.codec]
package = "parity-scale-codec"
version = "2"
default-features = false
features = ["derive", "full", "bit-vec"]


