[package]
name = "task_auction"
version = "0.1.0"
authors = ["WenZheng Li <wzli@rapyuta-robotics.com>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", path = "../../../ink/crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc2", path = "../../../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", path = "../../../ink/crates/env", default-features = false }
ink_storage = { version = "3.0.0-rc2", path = "../../../ink/crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc2", path = "../../../ink/crates/lang", default-features = false }
ink_prelude = { version = "3.0.0-rc2", path = "../../../ink/crates/prelude", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4.1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "task_auction"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
